--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <p>
+        <a href="recipes/lasagna.html">Lasagna Reecipes</a>
+    </p>
 </body>
 </html>
