--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Your Recipe Title</h1>
     
-    <img src="your-image-url.jpg" alt="Image of the Dish" style="width:100%;max-width:600px;">
+    <img src="images/enchiladas.png" alt="Enchiladas" />
 
     <h2>Description</h2>
     <p>
